Refactor ContentRepository and related interfaces